# markdown-generator

./: .gitignore  README.md  requirements.txt  setup.cfg
src/MDgen/: __init__.py  base.py  util.py
src/MDgen/chart/: __init__.py  chartinfo.py  colorinfo.py  piechart.py  test.md
src/MDgen/profile/: __init__.py  git_colors.py  git_language_info.py  git_piechart.py  git_tools_image.py  gituser.py  images.py
src/MDgen/profile/Generate git colors/: make_colors.py
