[metadata]
name = README generator
version = 0.1.0
author = Darin Chau
description = Generate READMEs using Python
long_description = file: README.md
keywords = readme, markdown, generator
license = GNU3 Public License
license_file = LICENSE
url = https://github.com/vert178/markdown_generator
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = 
    markdown_generator
zip_safe = False
package_dir = 
    =src
python_requires = >=3.10
install_requires =
    numpy>=1.22.4
